# Instaling-rust

./: Cargo.toml  README.md  config.conf  dictionary.txt  dictionary.txt1
src/: config_manager.rs  dictionary.rs  glade.ui  glade.ui~  gtk.rs  handler.rs  main.rs  translator_patched.rs
