[package]
name = "instaling_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gtk"
path = "src/gtk.rs"
[dependencies]
configparser = "3.0.0"
once_cell = "1.9.0"
reqwest = { version = "0.11.9", features = ["cookies","json"]}
rustlate = "1.0.0"
json = "*"
colored = "2"
rand = "0.8"
gtk = "0.15.4"
tl = "0.2.1"